--- a/client/main.css
+++ b/client/main.css
@@ -11,18 +11,13 @@ body {
   min-height: 100vh;
   flex-direction: column;
 }
-main {
+
+#main {
   flex: 1 0 auto;
 }
 
 #main {
   min-height: 600px;
-}
-
-footer {
-  bottom: 0;
-  left: 0;
-  right: 0;
 }
 
 .container h3 {
@@ -106,7 +101,7 @@ nav .notification-btn a i {
 }
 
 .parallax-container {
-  height: 400px;
+  height: 405px;
 }
 
 .info-block {
@@ -114,7 +109,7 @@ nav .notification-btn a i {
 }
 
 .theme-block img {
-  max-height: 400px;
+  max-height: 405px;
 }
 
 footer.page-footer {
@@ -491,14 +486,30 @@ input[type=text]:focus:not([readonly]) + label {
   text-align: center;
 }
 
-#dressingNameEdit {
-  display: inline-block;
+.dressing-title {
+  overflow: hidden;
+  text-align: center;
 }
 
-#dressingNameEdit i {
-  display: none;
+.dressing-title i {
+  opacity: 0;
+  margin-top: 5px;
+  margin-left: 10px;
+  position: absolute;
+  transition: .5s;
 }
 
-#dressingNameEdit:hover i {
+.dressing-title h3:hover i {
+  opacity: 1;
+} 
+
+.dressing-title input[type=text] {
+  font-size: 2rem !important;
+  font-weight: 500;
+  text-align: center;
+  font-size: 2.92rem;
+  line-height: 110%;
+  margin: 1.46rem 0 1.168rem 0;
+  margin-top: 15px;
   display: inline-block;
 }
